<resources>
    <string name="app_name">MEDISPENSER</string>
    <string name="login">Login</string>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="forgotten_pass">¿Olvidaste tu contraseña?</string>
    <string name="repeat_pass">Repite la contraseña</string>
    <string name="create_user">Crear usuario</string>
    <string name="keep_session">Mantener la sesión iniciada</string>
    <string name="access">Acceder</string>
    <string name="forgotten_password">Reestablecer contraseña</string>
    <string name="must_create_user">Debe crear el usuario antes de acceder.</string>
    <string name="login_ok">Ha iniciado sesión correctamente</string>
    <string name="login_fail">Campo(s) usuario y/o contraseña incorrecto(s)</string>
    <string name="must_fill">Debe rellenar todos los campos</string>
    <string name="register_ok">Registro realizado con éxito. Por favor, inicie sesión</string>
    <string name="level_1">Nivel 1</string>
    <string name="level_2">Nivel 2</string>
    <string name="level_3">Nivel 3</string>
    <string name="exit">Cerrar sesión</string>
    <string name="user_name">Nombre de usuario:</string>
    <string name="add_med">Añadir medicación</string>
    <string name="edit_med">Editar medicamento</string>
    <string name="add_take">Añadir toma</string>
    <string name="edit_takes">Editar tomas</string>
    <string name="info_med">Info del medicamento</string>
    <string name="takes">Tomas</string>
    <string name="med_level_1">MED1</string>
    <string name="pills_level_1">PILLS1</string>
    <string name="takes_level_1">TAKES1</string>
    <string name="med_level_2">MED2</string>
    <string name="pills_level_2">PILLS2</string>
    <string name="takes_level_2">TAKES2</string>
    <string name="med_level_3">MED3</string>
    <string name="pills_level_3">PILLS3</string>
    <string name="takes_level_3">TAKES3</string>
    <string name="level">Nivel</string>
    <string name="name_of_med">Nombre del medicamento</string>
    <string name="add">Añadir</string>
    <string name="name">Nombre</string>
    <string name="amount">Nº de pastillas introducidas (1-7)</string>
    <string name="wrong_number">La cantidad de pastillas introducidas debe ser un número del 1 al 7</string>
    <string name="deleteMed">Eliminar el medicamento actual</string>
    <string name="has_med">HAS_MED</string>
    <string name="hour">Hora en formato 24h (hh : mm)</string>
    <string name="deleteTakes">Eliminar las tomas actuales</string>
    <string name="has_takes">HAS_TAKES</string>
    <string name="wrong_size">Cada uno de los campos debe tener 2 números</string>
    <string name="wrong_hour">Hora seleccionada errónea, por favor, revise los números introducidos</string>
    <string name="patient_list">Lista de pacientes</string>
    <string name="patient_name">Nombre del paciente</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="add_patient">Añadir paciente</string>
    <string name="surname">Apellidos</string>
    <string name="sex">Sexo</string>
    <string name="sex_prompt">Elige el sexo</string>
    <string name="signUp">Registro</string>
    <string name="select">Seleccionar</string>
    <string name="menu">Menú</string>
    <string name="patient_data">Datos del paciente:</string>
    <string name="treatments">Tratamientos</string>
    <string name="spd">Dispensador</string>
    <string name="meds">Medicamentos</string>
    <string name="med">Medicamento</string>
    <string name="add_treatment">Añadir tratamiento</string>
    <string name="name_treatment">Nombre del tratamiento</string>
    <string name="delete_treatment">Eliminar tratamiento</string>
    <string name="times_day">Veces al día</string>
    <string name="init_hour">Hora de inicio</string>
    <string name="delete">¿Desea eliminar</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="all_treatment">todo el tratamiento de</string>
    <string name="info">Información</string>
    <string name="add_load">Cargar nivel</string>
    <string name="delete_load">Eliminar carga actual</string>
    <string name="amount_lef">Nº de pastillas restantes:</string>
    <string name="load">Cargar</string>
    <string name="amount_of_pills">Nº pastillas</string>
    <string name="no_med">Ningún medicamento añadido</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="settings">Opciones</string>

</resources>
