<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.windows.medispenser.UI.MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ic_back"
        android:padding="16dp"
        app:srcCompat="@drawable/ic_icon_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        android:textSize="60dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:id="@+id/user_name"
        android:paddingLeft="14dp"
        android:text="@string/user_name"
        android:textColor="@color/colorPrimaryDark"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_1"
            android:layout_marginBottom="6dp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/level_1"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:background="@drawable/oval" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_2"
            android:layout_marginVertical="6dp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/level_2"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:background="@drawable/oval" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/level_3"
            android:layout_marginVertical="6dp"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/level_3"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:background="@drawable/oval" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_exit"
            android:layout_marginHorizontal="10dp"
            android:background="@drawable/square"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/exit"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

    </LinearLayout>


</LinearLayout>

