<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.windows.medispenser.ui.MenuActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.75"
        android:fontFamily="@font/science_fair"
        android:gravity="center"
        android:text="@string/menu"
        android:textColor="@android:color/black"
        android:textSize="60dp" />

    <TextView
        android:id="@+id/tv_patient_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/patient_data"
        android:layout_marginLeft="40dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_marginHorizontal="40dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_treatments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rectangle_grey"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/treatments"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black" />


        <Button
            android:id="@+id/btn_spd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rectangle_grey"
            android:fontFamily="@font/comfortaa_bold"
            android:gravity="center"
            android:paddingVertical="8dp"
            android:text="@string/spd"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/black" />




    </LinearLayout>


</LinearLayout>


