<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context="com.example.windows.medispenser.ui.AddTreatmentActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:fontFamily="@font/science_fair"
        android:gravity="center"
        android:text="@string/add_treatment"
        android:textColor="@android:color/black"
        android:textSize="50dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="26dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/name_treatment"
            android:paddingVertical="20dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/et_treatment_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/rectangle_white"
            android:fontFamily="@font/comfortaa_bold"
            android:hint="@string/name"
            android:inputType="textCapWords"
            android:maxHeight="35dp"
            android:maxLines="1"
            android:paddingVertical="4dp"
            android:textAlignment="center" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:layout_gravity="center"
        android:layout_marginHorizontal="26dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/btn_addTreatment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rectangle_grey"
            android:fontFamily="@font/comfortaa_bold"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />


    </LinearLayout>


</LinearLayout>


