<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animationCache="true"
    android:background="@drawable/background"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/ll_patient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="4dp"
        android:paddingTop="4dp">
        
        <TextView
                android:id="@+id/patient_name"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/patient_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />


        <TextView
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/birthday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

        <TextView
                android:id="@+id/sex"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:fontFamily="@font/comfortaa_bold"
                android:text="@string/sex"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/black" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black"/>

</LinearLayout>