<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:animationCache="true"
	android:orientation="vertical">

	<ImageView
		android:layout_width="200dp"
		android:layout_height="200dp"
		android:layout_gravity="center_horizontal"
		android:layout_marginBottom="10dp"
		android:adjustViewBounds="false"
		android:background="@drawable/logo_trans_med"
		android:cropToPadding="false" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="40dp"
		android:orientation="vertical">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:fontFamily="@font/comfortaa_bold"
			android:text="@string/user"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:textColor="@android:color/black" />

		<EditText
			android:id="@+id/et_user"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:autofillHints="@string/user"
			android:background="@drawable/rectangle_white"
			android:fontFamily="@font/comfortaa_bold"
			android:hint="@string/user"
			android:inputType="text"
			android:maxLines="1"
			android:paddingVertical="4dp"
			android:textAlignment="center" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			android:fontFamily="@font/comfortaa_bold"
			android:text="@string/pass"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:textColor="@android:color/black" />

		<EditText
			android:id="@+id/et_pass"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:autofillHints="@string/pass"
			android:background="@drawable/rectangle_white"
			android:fontFamily="@font/comfortaa_bold"
			android:hint="@string/pass"
			android:inputType="textPassword"
			android:maxLines="1"
			android:paddingVertical="4dp"
			android:textAlignment="center" />
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginHorizontal="40dp"
		android:layout_marginVertical="20dp"
		android:orientation="vertical">

		<Button
			android:id="@+id/btn_access"
			android:layout_width="match_parent"
			android:layout_height="35dp"
			android:layout_marginBottom="10dp"
			android:layout_marginHorizontal="10dp"
			android:background="@drawable/buttom"
			android:fontFamily="@font/comfortaa_bold"
			android:text="@string/access"
			android:textAlignment="center"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:textColor="@android:color/black" />

		<Button
			android:id="@+id/btn_createUser"
			android:layout_width="match_parent"
			android:layout_height="35dp"
			android:layout_marginBottom="10dp"
			android:layout_marginHorizontal="10dp"
			android:background="@drawable/buttom"
			android:fontFamily="@font/comfortaa_bold"
			android:text="@string/create_user"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:textColor="@android:color/black"
			android:textSize="18sp" />

		<Button
			android:id="@+id/forgotten_pass"
			android:layout_width="match_parent"
			android:layout_height="35dp"
			android:layout_marginBottom="10dp"
			android:layout_marginHorizontal="10dp"
			android:background="@drawable/buttom"
			android:fontFamily="@font/comfortaa_bold"
			android:text="@string/forgotten_password"
			android:textAppearance="@style/TextAppearance.AppCompat.Medium"
			android:textColor="@android:color/black" />

		<!--<Button-->
		<!--andridd:idid@+id/btn_forgotten_password"-->
		<!--android:layout_width="match_parent"-->
		<!--android:layout_height="35dp"-->
		<!--android:layout_marginHorizontal="10dp"-->
		<!--android:layout_marginTop="50dp"-->
		<!--android:background="@drawable/rectangle_transparent"-->
		<!--android:fontFamily="@font/comfortaa_bold"-->
		<!--android:text="@strForgottenPasswordActivityword"-->
		<!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"-->
		<!--android:textColor="@android:color/black" />-->

	</LinearLayout>


</LinearLayout>
