<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.windows.medispenser.ui.SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/signUp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="60dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/user"/>

        <EditText
            android:id="@+id/et_user_signUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            android:paddingLeft="4dp"
            android:maxLines="1"
            android:background="@drawable/square" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/pass"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_pass_signUp"
            android:paddingLeft="4dp"
            android:background="@drawable/square"
            android:inputType="textPassword"
            android:paddingVertical="4dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/name"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_name_signUp"
            android:paddingLeft="4dp"
            android:background="@drawable/square"
            android:inputType="textCapWords"
            android:paddingVertical="4dp"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/surname"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_surname_signUp"
            android:paddingLeft="4dp"
            android:background="@drawable/square"
            android:inputType="textCapWords"
            android:paddingVertical="4dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/birthday"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:focusable="false"
            android:id="@+id/et_birthday_signUp"
            android:paddingLeft="4dp"
            android:background="@drawable/square"
            android:inputType="text"
            android:paddingVertical="4dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/sex"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="34dp"
            android:layout_weight="1"
            android:background="@drawable/rectangle_white"
            android:paddingVertical="4dp">
            <Spinner
                android:id="@+id/spinner_sex_signUp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center">


        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="34dp"
            android:id="@+id/btn_signUp"
            android:text="@string/create_user"
            android:background="@drawable/square"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    </LinearLayout>



</LinearLayout>
