<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.windows.medispenser.ui.AddPatientActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:text="@string/add_patient"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-condensed"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="26dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/name"/>

        <EditText
            android:id="@+id/et_patient_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="text"
            android:paddingLeft="4dp"
            android:paddingVertical="4dp"
            android:background="@drawable/square" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="26dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/surname"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/et_patient_surname"
            android:background="@drawable/square"
            android:paddingLeft="4dp"
            android:inputType="text"
            android:maxLines="1"
            android:paddingVertical="4dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="26dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:text="@string/birthday"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/et_patient_birthday"
            android:background="@drawable/square"
            android:paddingLeft="4dp"
            android:focusable="false"
            android:paddingVertical="4dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginHorizontal="26dp"
        android:layout_marginVertical="20dp"
        android:layout_gravity="center">


        <Button
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:id="@+id/btn_addPatient"
            android:background="@drawable/square"
            android:layout_marginTop="6dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/add"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black" />


    </LinearLayout>




</LinearLayout>

